[tool.poetry]
name = "repl_python3_beta_dionysos-bot"
version = "0.1.0"
description = ""
authors = ["TheAmmiR <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
dblpy = "^0.4.0"
discord = "^1.7.3"
python-dotenv = "^0.19.0"
tinydb = "^4.5.1"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
